# plasma-web-ide

./: .gitpod.yml  LICENSE  README.md  start-chain.sh
contracts/Custom Token/: CMakeLists.txt  README.md  build.sh
contracts/Custom Token/simple_token/: CMakeLists.txt  simple_token.cpp  simple_token.hpp
contracts/DAO /: LICENSE  README.md
contracts/DAO /src/config/: config.js
contracts/DAO /src/oracle/: contract.js  oracle.js
contracts/DAO /src/simple_vote/: simple_vote.cpp  simple_vote.hpp
contracts/hello/: compile_flags.txt  hello.cpp  hello.hpp
contracts/talk/: CMakeLists.txt  talk.cpp  talk.hpp
webapp/: index.html  package.json  start.sh
webapp/src/: index.tsx
